--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jekyll AsciiDoc Quickstart
+title: Mon premier site en adoc
 description: The Jekyll AsciiDoc Quickstart project is a leg-up in starting your own website hosted on GitHub with content based in AsciiDoc.
 exclude:
   - LICENSE.adoc
